welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: ')' expected but ';' found.
    else(prendBiscuit();retourne())
                       ^DwarfCode:5: error: ';' expected but ')' found.
    else(prendBiscuit();retourne())
                                  ^DwarfCode:9: error: ')' expected but ';' found.
    else(recule();poseBiscuit();retourne)
                 ^DwarfCode:9: error: ';' expected but ')' found.
    else(recule();poseBiscuit();retourne)
                                        ^